# media-uploader

./: .gitignore  dev_build.sh
.github/workflows/: main.yml
code/backend/: Cargo.toml
code/backend/src/: main.rs
code/frontend/: Cargo.toml  index.html
code/frontend/src/: lib.rs
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.serve
