[package]
name = "media-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
mongodb = "2.4.0"
futures = "0.3.28"
futures-util = { version = "0.3", default-features = false, features = ["sink","io"] }
hyper = "0.14.25"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3.4"
