[package]
name = "media-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3"
web-sys = { version = "0.3.22", features = ["Blob","Document", "Element","File","FileList","FormData","FileReader","Headers", "HtmlCollection", "HtmlElement","HtmlInputElement","Request","RequestInit","RequestMode","Response","Window"]}	

